all sensor has been connect to dashboard

--- a/iotsensor/templates/gauge.html
+++ b/iotsensor/templates/gauge.html
@@ -104,6 +104,10 @@
         };
         console.log("------------")
         console.log({{ time }})
+        console.log({{ mq9 }})
+        console.log({{ mq2 }})
+        console.log({{ mq135 }})
+        console.log({{ gp2 }})
         console.log("+++++++++++++")
         option2 = {
             tooltip: {
